--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
 
-    <string name="app_name">Low Key Gaming</string>
+    <string name="app_name">LowKeyGaming</string>
+    <string name="loading">Loading</string>
 
 </resources>
